# sr_manipulation_interfaces

./: .pre-commit-config.yaml  CMakeLists.txt  package.xml
action/: Manip.action  PlanMoveTo.action
msg/: ManipType.msg  MoveWaypoint.msg  ObjectDescriptor.msg  PlanExecState.msg  ServiceResult.msg
srv/: AddObjects.srv  AttachObject.srv  DetachObject.srv  GetObjectPose.srv  LoadPlan.srv  MoveToJointPosition.srv  MoveToPose.srv  MoveToPoseSeq.srv  RemoveObjects.srv  SetScalingFactor.srv
